<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.yijunchen.homes.fragments.MapFragment">

    <include
        android:id="@+id/map_toolbar"
        layout="@layout/map_tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/divider1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/property_cate_one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Rent"
            android:textColor="@color/map_orange" />

        <View
            android:id="@+id/divider2"
            style="@style/Hor_Divider" />

        <TextView
            android:id="@+id/property_cate_two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Mortgage"
            android:textColor="@color/map_blue" />

        <View
            android:id="@+id/divider3"
            style="@style/Hor_Divider" />

        <TextView
            android:id="@+id/property_cate_three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Outright Purchase"
            android:textColor="@color/map_green" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.v7.widget.FitWindowsFrameLayout
            android:id="@+id/short_view"
            android:name="com.example.yijunchen.homes.fragments.ShortViewOfPropertyFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="bottom" />

    </FrameLayout>
</LinearLayout>