<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_homepage"
        android:enabled="true"
        android:icon="@drawable/icon_homepage"
        android:title="Home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/search2"
        android:title="Search"
        app:showAsAction="ifRoom" />
</menu>