<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/categort_linear_layout">

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/rent_slider"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rent_all_property_recycleview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</ScrollView>